--- a/learningRESTAPI/src/main/resources/application.properties
+++ b/learningRESTAPI/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=learningRESTAPI
+
+spring.datasource.url=jdbc:mysql://localhost:3306/studentDB
+spring.datasource.username=root
+spring.datasource.password=vil100sr
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# username nd password can aslo be given
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+ 
