--- a/Todo/todo-backend/src/main/resources/application.properties
+++ b/Todo/todo-backend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=todo-backend
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# JPA / Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console (Access at http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+
+# Server Port (Avoid conflict with React 5173)
+server.port=8080
+
+# CORS for Frontend
+spring.web.cors.allowed-origins=http://localhost:5173
