app config and use of @ Value

--- a/inversion_of_control/src/main/resources/application.properties
+++ b/inversion_of_control/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=basic
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# H2 Console (for testing)
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# JPA/Hibernate settings
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# App properties for testing
+app.name=Configuration Demo
+app.version=1.0
+user.name=Vishal Kamath
+user.email=kamathvishal80085@gmail.com
+user.age=22
+
+# Nested config for @ConfigurationProperties
+app.settings.timeout=30000
+app.settings.max-retries=3
+app.settings.debug=true
